--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
   <span class="dot" onclick="currentSlide(15)"></span>
 </div>
 
-<div class="w3-container w3-half">
+<div class="w3-container w3-half style="margin-top:30px;"">
   <img src="./images/1.jpg" style="width:100%" class="w3-card-2">
   </div>
   
-  <div class="w3-container w3-half">
+  <div class="w3-container w3-half style="margin-top:30px;"">
   <img src="./images/2.jpg" style="width:100%" class="w3-card-2">
   </div>
   
