--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
       <img src="./images/american-home.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
   </div>
+</div>	
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
