--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
   <img src="./images/13.jpg" style="width:100%" class="w3-card-2">
   </div>
 
-<div class="w3-container" style="padding:128px 16px;" id="products">
+<div class="w3-container" style="margin-top:64px; padding:128px 16px;" id="products">
   <h3 class="w3-center style="text-shadow:1px 1px 0 #444; letter-spacing:10px; margin-top:64px">What we serve to our people</h3>
 
   <div class="w3-row-padding" style="margin-top:64px">
@@ -249,8 +249,7 @@
     <div class="w3-col l3 m6">
       <img src="./images/american-home.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
-  </div>
-</div>	
+  </div></div>	
 
   <div class="w3-row-padding w3-section">
     <div class="w3-col l3 m6">
