--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
   <span class="dot" onclick="currentSlide(15)"></span>
 </div>
 
+<div class="w3-container">	
 <div class="w3-container w3-half" style="margin-top:30px;">
   <img src="./images/1.jpg" style="width:100%" class="w3-card-2">
   </div>
@@ -232,6 +233,7 @@
   <div class="w3-container w3-half" style="margin-top:30px;">
   <img src="./images/13.jpg" style="width:100%" class="w3-card-2">
   </div>
+</div>	
 
 <div class="w3-container" style="margin-top:64px; padding:128px 16px;" id="products">
   <h3 class="w3-center style="text-shadow:1px 1px 0 #444; letter-spacing:10px; margin-top:64px">What we serve to our people</h3>
