--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 </div>	
 
 <div class="w3-container" style="margin-top:64px; padding:128px 16px;" id="products">
-  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>What we serve to our people</b></h1>
+  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>WE OFFER VARIOUS AIRCON BRANDS</b></h1>
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
