--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 </nav>
 
 <!-- Header with full-height image -->
-<header class="bgimg-1 w3-display-container" id="home" style:"background-image: url('./images/ac-bg-img.png');">
+<header class="bgimg-1 w3-display-container" id="home" style="background-image: url('./images/ac-bg-img.png');">
   <div class="w3-text-black w3-display-right" style="padding:48px">
     <span class="w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444; letter-spacing:30px">ZWEI ASIA</span><br>
     <span class="w3-xxlarge w3-hide-large" w3-hide-medium style="text-shadow:1px 1px 0 #444; letter-spacing:30px">ZWEI ASIA</span><br>
