--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="./css/style.css">
+<link rel="icon" type="image/x-icon" href="./images/zwei-logo.png">
 
 </head>
 <body>
