--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </header>
 
 <!-- About Section -->
-<header class="w3-display-container" id="home" style="background-image: url('./images/ac-bg-img.png');">
+<header class="w3-display-container bgimg-1" id="home" style="background-image: url('./images/bg-img.jpg');">
 <div class="w3-container" style="padding:128px 16px" id="about">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>ABOUT THE COMPANY</b></h1>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
