--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
 <div class="w3-container" style="padding:128px 16px" id="about">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>ABOUT THE COMPANY</b></h1>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-half w3-card-4">
+    <div class="w3-half w3-card-2 w3-sand">
       <i class="fa fa-bullseye w3-margin-bottom w3-jumbo w3-center"></i>
       <h3 style="letter-spacing:10px"><b>MISSION</b></h3>
       <h5>As a trading and services company that provides services geared toward the comfort and convenience of its customers, ZweiAisa strives to deliver good quality air conditioning products and services to achieve a cozy and productive environment in your homes and offices. </h5>
     </div>
-    <div class="w3-half w3-card-4">
+    <div class="w3-half w3-card-2 w3-sand">
       <i class="fa fa-eye w3-margin-bottom w3-jumbo"></i>
       <h3 style="letter-spacing:10px"><b>VISION</b></h3>
       <h5>As your preventive maintenance partner, our ambition is to transform every air conditioning home into a well-maintained cozy environment that fosters creativity and productivity in all aspects.</h5>
