--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container" id="home" style="background-image: url('./images/ac-bg-img.png');">
   <div class="w3-text-black w3-display-right" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444; letter-spacing:30px">ZWEI ASIA</span><br>
+    <span class="w3-jumbo w3-hide-small" style="color:white text-shadow:1px 1px 0 #444; letter-spacing:30px">ZWEI ASIA</span><br>
     <span class="w3-xxlarge w3-hide-large" w3-hide-medium style="text-shadow:1px 1px 0 #444; letter-spacing:30px">ZWEI ASIA</span><br>
     <span class="w3-large" style="letter-spacing:3px">Your preventive maintenance partner!</span>
     <p><a href="#about" class="w3-button w3-white w3-padding-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more about our company</a></p>
@@ -64,12 +64,12 @@
 <div class="w3-container" style="padding:128px 16px" id="about">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>ABOUT THE COMPANY</b></h1>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
-    <div class="w3-half w3-card w3-sand">
+    <div class="w3-half w3-sand">
       <i class="fa fa-bullseye w3-margin-bottom w3-jumbo w3-center"></i>
       <h3 style="letter-spacing:10px"><b>MISSION</b></h3>
       <h5>As a trading and services company that provides services geared toward the comfort and convenience of its customers, ZweiAisa strives to deliver good quality air conditioning products and services to achieve a cozy and productive environment in your homes and offices. </h5>
     </div>
-    <div class="w3-half w3-card w3-sand">
+    <div class="w3-half w3-sand">
       <i class="fa fa-eye w3-margin-bottom w3-jumbo"></i>
       <h3 style="letter-spacing:10px"><b>VISION</b></h3>
       <h5>As your preventive maintenance partner, our ambition is to transform every air conditioning home into a well-maintained cozy environment that fosters creativity and productivity in all aspects.</h5>
