--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
 <!-- About Section -->
 <header class="w3-display-container bgimg-1" id="home" style="background-image: url('./images/bg-img.jpg');">
 <div class="w3-container" style="padding:128px 16px" id="about">
+<div class="w3-container w3-card w3-blue-grey">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>ABOUT THE COMPANY</b></h1>
+</div>	  
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-half">
       <i class="fa fa-bullseye w3-margin-bottom w3-jumbo w3-center"></i>
