--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </header>
 
 <!-- About Section -->
-<header class="w3-display-container bgimg-1" id="home" style="background-image: url('./images/bg-img.jpg');">
+<header class="w3-display-container bgimg-1" id="home">
 <div class="w3-container" style="padding:128px 16px" id="about">
 <div class="w3-container w3-card w3-blue-grey">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>ABOUT THE COMPANY</b></h1>
@@ -68,12 +68,16 @@
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-half">
       <i class="fa fa-bullseye w3-margin-bottom w3-jumbo w3-center"></i>
+<div class="w3-container w3-card w3-khaki">
       <h3 style="letter-spacing:10px"><b>MISSION</b></h3>
+</div>	
       <h5>As a trading and services company that provides services geared toward the comfort and convenience of its customers, ZweiAisa strives to deliver good quality air conditioning products and services to achieve a cozy and productive environment in your homes and offices. </h5>
     </div>
     <div class="w3-half">
       <i class="fa fa-eye w3-margin-bottom w3-jumbo"></i>
+<div class="w3-container w3-card w3-khaki">  
       <h3 style="letter-spacing:10px"><b>VISION</b></h3>
+</div>	
       <h5>As your preventive maintenance partner, our ambition is to transform every air conditioning home into a well-maintained cozy environment that fosters creativity and productivity in all aspects.</h5>
     </div>
   </div>
