--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 
 <!-- Products Section -->
 <div class="w3-container" style="padding:128px 16px" id="products">
+	<div class="w3-container w3-card w3-blue-grey">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>OUR PRODUCTS</b></h1>
+	</div>
 
 <div class="slideshow-container">
 
@@ -242,7 +244,9 @@
 </div>	
 
 <div class="w3-container" style="margin-top:64px; padding:128px 16px;" id="products">
+	<div class="w3-container w3-card w3-blue-grey">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>WE OFFER VARIOUS AIRCON BRANDS</b></h1>
+	</div>
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
@@ -288,7 +292,9 @@
 
 <!-- Services Section -->
 <div class="w3-container" style="padding:128px 16px" id="services">
+	<div class="w3-container w3-card w3-blue-grey">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:50px"><b>SERVICES</b></h1>
+	</div>
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card-4">
@@ -408,7 +414,9 @@
 
 <!-- Contact Section -->
 <div class="w3-container" style="padding:128px 16px" id="contact">
+	<div class="w3-container w3-card w3-blue-grey">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>CONTACT</b></h1>
+	</div>
   <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
   <div style="margin-top:48px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> 1974 Perfecto Street, Tayuman, Manila</p>
