--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>WE OFFER VARIOUS AIRCON BRANDS</b></h1>
 	</div>
 
-  <div class="w3-row-padding" style="margin-top:64px">
+  <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-col l3 m6">
       <img src="./images/aux-air.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
@@ -263,7 +263,7 @@
     </div>
   </div></div>	
 
-  <div class="w3-row-padding w3-section">
+  <div class="w3-row-padding w3-section w3-center">
     <div class="w3-col l3 m6">
       <img src="./images/matrix.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
@@ -278,7 +278,7 @@
     </div>
   </div>
 
-<div class="w3-row-padding w3-section">
+<div class="w3-row-padding w3-section w3-center">
     <div class="w3-col l4 m6">
       <img src="./images/carrier.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
     </div>
