--- a/index.html
+++ b/index.html
@@ -71,15 +71,21 @@
 <div class="w3-container w3-card w3-khaki">
       <h3 style="letter-spacing:10px"><b>MISSION</b></h3>
 </div>	
+<div class="w3-container w3-card w3-light-grey">
       <h5>As a trading and services company that provides services geared toward the comfort and convenience of its customers, ZweiAisa strives to deliver good quality air conditioning products and services to achieve a cozy and productive environment in your homes and offices. </h5>
-    </div>
+</div>
+</div>
+
     <div class="w3-half">
       <i class="fa fa-eye w3-margin-bottom w3-jumbo"></i>
 <div class="w3-container w3-card w3-khaki">  
       <h3 style="letter-spacing:10px"><b>VISION</b></h3>
 </div>	
+<div class="w3-container w3-card w3-light-grey">	
       <h5>As your preventive maintenance partner, our ambition is to transform every air conditioning home into a well-maintained cozy environment that fosters creativity and productivity in all aspects.</h5>
-    </div>
+</div>    
+</div>
+	
   </div>
 </div>
 </header>
