--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:30px"><b>OUR PRODUCTS</b></h1>
 	</div>
 
-<div class="slideshow-container">
+<div class="slideshow-container" style="padding-top:64px;">
 
 <div class="w3-center mySlides fade">
   <img src="./images/aux-ac.png" style="width:50%">
