--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-blue-grey w3-card" id="myNavbar">
+  <div class="w3-bar w3-light-grey w3-card" id="myNavbar">
     <a href="#home" class="w3-bar-item w3-button w3-wide">HOME</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
