--- a/index.html
+++ b/index.html
@@ -256,43 +256,43 @@
 
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="./images/aux-air.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/aux-air.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/koppel.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/koppel.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/daikin.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/daikin.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/american-home.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/american-home.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
   </div></div>	
 
   <div class="w3-row-padding w3-section w3-center">
     <div class="w3-col l3 m6">
-      <img src="./images/matrix.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/matrix.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/fujidenzo.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/fujidenzo.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/haier.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/haier.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/lg.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/lg.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
   </div>
 
 <div class="w3-row-padding w3-section w3-center">
     <div class="w3-col l4 m6">
-      <img src="./images/carrier.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/carrier.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
     <div class="w3-col l4 m6">
-      <img src="./images/midea.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/midea.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
     <div class="w3-col l4 m6">
-      <img src="./images/tcl.png" style="width:50%" onclick="onClick(this)" class="w3-hover-opacity">
+      <img src="./images/tcl.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
     </div>
 </div>
 
@@ -409,15 +409,6 @@
   </div>
 </div>
 
-<!-- Modal for full size images on click-->
-<div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-  <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
-  <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-    <img id="img01" class="w3-image">
-    <p id="caption" class="w3-opacity w3-large"></p>
-  </div>
-</div>
-
 <!-- Contact Section -->
 <div class="w3-container" style="padding:128px 16px" id="contact">
 	<div class="w3-container w3-card w3-blue-grey">
@@ -457,14 +448,6 @@
 </footer>
  
 <script>
-// Modal Image Gallery
-function onClick(element) {
-  document.getElementById("img01").src = element.src;
-  document.getElementById("modal01").style.display = "block";
-  var captionText = document.getElementById("caption");
-  captionText.innerHTML = element.alt;
-}
-
 
 // Toggle between showing and hiding the sidebar when clicking the menu icon
 var mySidebar = document.getElementById("mySidebar");
