--- a/index.html
+++ b/index.html
@@ -256,43 +256,43 @@
 
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="./images/aux-air.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/aux-air.png" style="width:70%" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/koppel.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/koppel.png" style="width:70%" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/daikin.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/daikin.png" style="width:70%" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/american-home.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/american-home.png" style="width:70%" class="w3-hover-opacity">
     </div>
   </div></div>	
 
   <div class="w3-row-padding w3-section w3-center">
     <div class="w3-col l3 m6">
-      <img src="./images/matrix.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/matrix.png" style="width:70%" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/fujidenzo.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/fujidenzo.png" style="width:70%" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/haier.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/haier.png" style="width:70%" class="w3-hover-opacity">
     </div>
     <div class="w3-col l3 m6">
-      <img src="./images/lg.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/lg.png" style="width:70%" class="w3-hover-opacity">
     </div>
   </div>
 
 <div class="w3-row-padding w3-section w3-center">
     <div class="w3-col l4 m6">
-      <img src="./images/carrier.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/carrier.png" style="width:70%" class="w3-hover-opacity">
     </div>
     <div class="w3-col l4 m6">
-      <img src="./images/midea.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/midea.png" style="width:70%" class="w3-hover-opacity">
     </div>
     <div class="w3-col l4 m6">
-      <img src="./images/tcl.png" style="width:50%" class="w3-hover-opacity w3-grayscale">
+      <img src="./images/tcl.png" style="width:70%" class="w3-hover-opacity">
     </div>
 </div>
 
