--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container" id="home" style="background-image: url('./images/ac-bg-img.png');">
   <div class="w3-text-black w3-display-right" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small" style="color:white; text-shadow:1px 1px 0 #444; letter-spacing:10px">ZWEI ASIA</span><br>
-    <span class="w3-xxlarge w3-hide-large" w3-hide-medium style="color:white; text-shadow:1px 1px 0 #444; letter-spacing:10px">ZWEI ASIA</span><br>
+    <span class="w3-jumbo w3-hide-small" style=text-shadow:1px 1px 0 #444; letter-spacing:5px">ZWEI ASIA</span><br>
+    <span class="w3-xxlarge w3-hide-large" w3-hide-medium style="color:white; text-shadow:1px 1px 0 #444; letter-spacing:5px">ZWEI ASIA</span><br>
     <span class="w3-large">Your preventive maintenance partner!</span>
-    <p><a href="#about" class="w3-button w3-pale-yellow w3-padding-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more about our company</a></p>
+    <p><a href="#about" class="w3-button w3-khaki w3-padding-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more about our company</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
@@ -63,13 +63,13 @@
 <header class="w3-display-container bgimg-1" id="home">
 <div class="w3-container" style="padding:128px 16px" id="about">
 <div class="w3-container w3-card w3-blue-grey">
-  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:10px"><b>ABOUT THE COMPANY</b></h1>
+  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>ABOUT THE COMPANY</b></h1>
 </div>	  
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-half">
       <i class="fa fa-bullseye w3-margin-bottom w3-jumbo w3-center"></i>
 <div class="w3-container w3-card w3-khaki">
-      <h3 style="letter-spacing:10px"><b>MISSION</b></h3>
+      <h3 style="letter-spacing:3px"><b>MISSION</b></h3>
 </div>	
 <div class="w3-container w3-card w3-light-grey">
       <h5>As a trading and services company that provides services geared toward the comfort and convenience of its customers, ZweiAisa strives to deliver good quality air conditioning products and services to achieve a cozy and productive environment in your homes and offices. </h5>
@@ -79,7 +79,7 @@
     <div class="w3-half">
       <i class="fa fa-eye w3-margin-bottom w3-jumbo"></i>
 <div class="w3-container w3-card w3-khaki">  
-      <h3 style="letter-spacing:10px"><b>VISION</b></h3>
+      <h3 style="letter-spacing:3px"><b>VISION</b></h3>
 </div>	
 <div class="w3-container w3-card w3-light-grey">	
       <h5>As your preventive maintenance partner, our ambition is to transform every air conditioning home into a well-maintained cozy environment that fosters creativity and productivity in all aspects.</h5>
@@ -95,7 +95,7 @@
 <!-- Products Section -->
 <div class="w3-container" style="padding:128px 16px" id="products">
 	<div class="w3-container w3-card w3-blue-grey">
-  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:10px"><b>OUR PRODUCTS</b></h1>
+  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>OUR PRODUCTS</b></h1>
 	</div>
 
 <div class="slideshow-container" style="padding-top:64px;">
@@ -251,7 +251,7 @@
 
 <div class="w3-container" style="margin-top:64px; padding:128px 16px;" id="products">
 	<div class="w3-container w3-card w3-blue-grey">
-  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:10px"><b>WE OFFER VARIOUS AIRCON BRANDS</b></h1>
+  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>WE OFFER VARIOUS AIRCON BRANDS</b></h1>
 	</div>
 
   <div class="w3-row-padding w3-center" style="margin-top:64px">
@@ -299,7 +299,7 @@
 <!-- Services Section -->
 <div class="w3-container" style="padding:128px 16px" id="services">
 	<div class="w3-container w3-card w3-blue-grey">
-  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:10px"><b>SERVICES</b></h1>
+  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>SERVICES</b></h1>
 	</div>
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
@@ -412,7 +412,7 @@
 <!-- Contact Section -->
 <div class="w3-container" style="padding:128px 16px" id="contact">
 	<div class="w3-container w3-card w3-blue-grey">
-  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:10px"><b>CONTACT</b></h1>
+  <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>CONTACT</b></h1>
 	</div>
   <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
   <div style="margin-top:48px">
