--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
-  <div class="w3-bar w3-light-grey w3-card" id="myNavbar">
+  <div class="w3-bar w3-indigo w3-card" id="myNavbar">
     <a href="#home" class="w3-bar-item w3-button w3-wide">HOME</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
@@ -44,10 +44,10 @@
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container" id="home" style="background-image: url('./images/ac-bg-img.png');">
   <div class="w3-text-black w3-display-right" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small" style=text-shadow:1px 1px 0 #444; letter-spacing:5px">ZWEI ASIA</span><br>
+    <span class="w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444; letter-spacing:5px">ZWEI ASIA</span><br>
     <span class="w3-xxlarge w3-hide-large" w3-hide-medium style="color:white; text-shadow:1px 1px 0 #444; letter-spacing:5px">ZWEI ASIA</span><br>
     <span class="w3-large">Your preventive maintenance partner!</span>
-    <p><a href="#about" class="w3-button w3-khaki w3-padding-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more about our company</a></p>
+    <p><a href="#about" class="w3-button w3-indigo w3-padding-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more about our company</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
@@ -62,7 +62,7 @@
 <!-- About Section -->
 <header class="w3-display-container bgimg-1" id="home">
 <div class="w3-container" style="padding:128px 16px" id="about">
-<div class="w3-container w3-card w3-blue-grey">
+<div class="w3-container w3-card w3-indigo">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>ABOUT THE COMPANY</b></h1>
 </div>	  
   <div class="w3-row-padding w3-center" style="margin-top:64px">
@@ -94,7 +94,7 @@
 
 <!-- Products Section -->
 <div class="w3-container" style="padding:128px 16px" id="products">
-	<div class="w3-container w3-card w3-blue-grey">
+	<div class="w3-container w3-card w3-indigo">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>OUR PRODUCTS</b></h1>
 	</div>
 
@@ -250,7 +250,7 @@
 </div>	
 
 <div class="w3-container" style="margin-top:64px; padding:128px 16px;" id="products">
-	<div class="w3-container w3-card w3-blue-grey">
+	<div class="w3-container w3-card w3-indigo">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>WE OFFER VARIOUS AIRCON BRANDS</b></h1>
 	</div>
 
@@ -298,7 +298,7 @@
 
 <!-- Services Section -->
 <div class="w3-container" style="padding:128px 16px" id="services">
-	<div class="w3-container w3-card w3-blue-grey">
+	<div class="w3-container w3-card w3-indigo">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>SERVICES</b></h1>
 	</div>
   <div class="w3-row-padding" style="margin-top:64px">
@@ -411,7 +411,7 @@
 
 <!-- Contact Section -->
 <div class="w3-container" style="padding:128px 16px" id="contact">
-	<div class="w3-container w3-card w3-blue-grey">
+	<div class="w3-container w3-card w3-indigo">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>CONTACT</b></h1>
 	</div>
   <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
@@ -436,7 +436,7 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-blue-grey w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="#home" class="w3-button w3-indigo"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
