--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-indigo w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide">HOME</a>
+    <a href="#home" class="w3-bar-item w3-button w3-wide" style="background-image: url('./images/zwei-logo.png')";></a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
       <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
