--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-indigo w3-card" id="myNavbar">
-    <a href="#home" class="w3-bar-item w3-button w3-wide">HOME</a>
+    <a href="#home" class="w3-bar-item w3-button w3-wide w3-hover-khaki">HOME</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
-      <a href="#about" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="#products" class="w3-bar-item w3-button">PRODUCTS</a>
-      <a href="#services" class="w3-bar-item w3-button">SERVICES</a>
-      <a href="#contact" class="w3-bar-item w3-button">CONTACT</a>
+      <a href="#about" class="w3-bar-item w3-button w3-hover-khaki">ABOUT</a>
+      <a href="#products" class="w3-bar-item w3-button w3-hover-khaki">PRODUCTS</a>
+      <a href="#services" class="w3-bar-item w3-button w3-hover-khaki">SERVICES</a>
+      <a href="#contact" class="w3-bar-item w3-button w3-hover-khaki">CONTACT</a>
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
