--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
 	<div class="w3-container w3-card w3-indigo">
   <h1 class="w3-center" style="text-shadow:1px 1px 0 #444; letter-spacing:5px"><b>CONTACT</b></h1>
 	</div>
-  <p class="w3-center w3-large">Lets get in touch. Send us a message:</p>
+  <p class="w3-center w3-large">Let's get in touch. Send us a message:</p>
   <div style="margin-top:48px">
     <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> 1974 Perfecto Street, Tayuman, Manila</p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Cel. Number: 0999-880-3956 / Landline: (02 ) 8782-5623</p>
@@ -436,7 +436,7 @@
 
 <!-- Footer -->
 <footer class="w3-center w3-indigo w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="#home" class="w3-button w3-light-grey w3-hover-khaki"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
