--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 </div>
 
 <!-- Sidebar on small screens when clicking the menu icon -->
-<nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button">HOME</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#products" onclick="w3_close()" class="w3-bar-item w3-button">PRODUCTS</a>
-  <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button">SERVICES</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+<nav class="w3-sidebar w3-bar-block w3-indigo w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16 w3-hover-khaki">Close ×</a>
+  <a href="#home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-khaki">HOME</a>
+  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-khaki">ABOUT</a>
+  <a href="#products" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-khaki">PRODUCTS</a>
+  <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-khaki">SERVICES</a>
+  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-khaki">CONTACT</a>
 </nav>
 
 <!-- Header with full-height image -->
