--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
   <div class="w3-text-black w3-display-right" style="padding:48px">
     <span class="w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444; letter-spacing:5px; color:blue;">ZWEI</span>
     <span class="w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444; letter-spacing:5px; color:yellow;">ASIA</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:1px 1px 0 #444; letter-spacing:5px">ZWEI ASIA</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:1px 1px 0 #444; letter-spacing:5px color:blue;">ZWEI</span>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:1px 1px 0 #444; letter-spacing:5px color:yellow;">ASIA</span><br>
     <span class="w3-large">Your preventive maintenance partner!</span>
     <p><a href="#about" class="w3-button w3-indigo w3-padding-large w3-margin-top w3-hover-khaki">Learn more about our company</a></p>
   </div> 
