--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
   <div class="w3-text-black w3-display-right" style="padding:48px">
     <span class="w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444; letter-spacing:5px; color:blue;"><b>ZWEI</b></span>
     <span class="w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444; letter-spacing:5px; color:yellow;"><b>ASIA</b></span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:1px 1px 0 #444; letter-spacing:5px color:blue;"><b>ZWEI></b></span>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:1px 1px 0 #444; letter-spacing:5px color:blue;"><b>ZWEI</b></span>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:1px 1px 0 #444; letter-spacing:5px color:yellow;"><b>ASIA</b></span><br>
     <span class="w3-large">Your preventive maintenance partner!</span>
-    <p><a href="#about" class="w3-button w3-indigo w3-padding-large w3-margin-top w3-hover-khaki">Learn more about our company</a></p>
+    <p><a href="#about" class="w3-button w3-khaki w3-padding-large w3-margin-top w3-hover-indigo">Learn more about our company</a></p>
   </div> 
   <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
