--- a/index.html
+++ b/index.html
@@ -280,14 +280,14 @@
     </div>
   </div>
 
-<div class="w3-row-padding w3-section w3-center">
-    <div class="w3-col l3 m6">
+<div class="row w3-center">
+    <div class="column">
       <img src="./images/carrier.png" style="width:70%" class="w3-hover-opacity">
     </div>
-    <div class="w3-col l3 m6">
+    <div class="column">
       <img src="./images/midea.png" style="width:70%" class="w3-hover-opacity">
     </div>
-    <div class="w3-col l3 m6">
+    <div class="column">
       <img src="./images/tcl.png" style="width:70%" class="w3-hover-opacity">
     </div>
 </div>	  
