--- a/index.html
+++ b/index.html
@@ -281,13 +281,13 @@
   </div>
 
 <div class="w3-row-padding w3-section w3-center">
-    <div class=""w3-col l4 m4">
+    <div class="w3-col l4 m4">
       <img src="./images/carrier.png" style="width:70%" class="w3-hover-opacity">
     </div>
-    <div class=""w3-col l4 m4">
+    <div class="w3-col l4 m4">
       <img src="./images/midea.png" style="width:70%" class="w3-hover-opacity">
     </div>
-    <div class=""w3-col l4 m4">
+    <div class="w3-col l4 m4">
       <img src="./images/tcl.png" style="width:70%" class="w3-hover-opacity">
     </div>
 </div>	  
