--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 <header class="bgimg-1 w3-display-container" id="home" style="background-image: url('./images/ac-bg-img.png');">
   <div class="w3-text-black w3-display-right" style="padding:48px">
     <span class="w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444; letter-spacing:5px; color:blue;"><b>ZWEI</b></span>
-    <span class="w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444; letter-spacing:5px; color:FFFF33;"><b>ASIA</b></span><br>
+    <span class="w3-jumbo w3-hide-small" style="text-shadow:1px 1px 0 #444; letter-spacing:5px; color:#FFFF33;"><b>ASIA</b></span><br>
     <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:1px 1px 0 #444; letter-spacing:5px color:blue;"><b>ZWEI</b></span>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:1px 1px 0 #444; letter-spacing:5px color:FFFF33;"><b>ASIA</b></span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium" style="text-shadow:1px 1px 0 #444; letter-spacing:5px color:#FFFF33;"><b>ASIA</b></span><br>
     <span class="w3-large">Your preventive maintenance partner!</span>
     <p><a href="#about" class="w3-button w3-light-grey w3-padding-large w3-margin-top w3-hover-indigo">Learn more about our company</a></p>
   </div> 
