--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 	</div>
   <p class="w3-center w3-large">Let's get in touch. Send us a message:</p>
   <div style="margin-top:48px">
-    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> 1974 Perfecto Street, Tayuman, Manila</p>
+    <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> 1974 Perfecto Street, Tondo, Manila</p>
     <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Cel. Number: 0999-880-3956 / Landline: (02 ) 8782-5623</p>
     <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: zweiasia.marketing@gmail.com</p>
     <br>
